--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300|Roboto+Condensed" rel="stylesheet">
 </head>
 
-<body>
-    <h1>Olá</h1>
-    <img src="http://lorempixel.com/400/200/">
+<body class="teste">
+    <header>
+		<div class="nav">
+			<h2 class="logo">BRK</h2>
+			<ul>
+				<li>Home</li>
+				<li>Contato</li>
+				<li>Sobre</li>
+				<li>Blabla</li>
+			</ul>
+		</div>
 
+	</header>
 </body>
 
 </html>
